[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
md-5 = "0.10.5"
regex = "1.7.0"
log = "0.4.17"
env_logger = "0.10.0"

[[bin]]
name = "14"
path = "src/14.rs"

[[bin]]
name = "12"
path = "src/12.rs"

[[bin]]
name = "11"
path = "src/11.rs"

[[bin]]
name = "10"
path = "src/10.rs"

[[bin]]
name = "9"
path = "src/9.rs"

[[bin]]
name = "8"
path = "src/8.rs"

[[bin]]
name = "7"
path = "src/7.rs"

[[bin]]
name = "6"
path = "src/6.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "4"
path = "src/4.rs"

[[bin]]
name = "3"
path = "src/3.rs"

[[bin]]
name = "2"
path = "src/2.rs"

[[bin]]
name = "1"
path = "src/1.rs"