[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
md-5 = "0.10.6"
regex = "1.11.1"
log = "0.4.22"
env_logger = "0.11.5"
aoc = { path = "../utils/rust", version = "0.1.3" }

[[bin]]
name = "six"
path = "src/six.rs"

[[bin]]
name = "five"
path = "src/five.rs"

[[bin]]
name = "four"
path = "src/four.rs"

[[bin]]
name = "three"
path = "src/three.rs"

[[bin]]
name = "two"
path = "src/two.rs"

[[bin]]
name = "one"
path = "src/one.rs"