[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
aoc = { path = "../utils/rust", version = "0.1.3" }
image = "0.25.5"
minifb = "0.27.0"

[[bin]]
name = "fifteen"
path = "src/fifteen.rs"

[[bin]]
name = "fourteen"
path = "src/fourteen.rs"

[[bin]]
name = "thirteen"
path = "src/thirteen.rs"

[[bin]]
name = "twelve"
path = "src/twelve.rs"

[[bin]]
name = "eleven"
path = "src/eleven.rs"

[[bin]]
name = "ten"
path = "src/ten.rs"

[[bin]]
name = "nine"
path = "src/nine.rs"

[[bin]]
name = "eight"
path = "src/eight.rs"

[[bin]]
name = "seven"
path = "src/seven.rs"

[[bin]]
name = "six"
path = "src/six.rs"

[[bin]]
name = "five"
path = "src/five.rs"

[[bin]]
name = "four"
path = "src/four.rs"

[[bin]]
name = "three"
path = "src/three.rs"

[[bin]]
name = "two"
path = "src/two.rs"

[[bin]]
name = "one"
path = "src/one.rs"